Complete turbo set up and docker containers

--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
+    "docker:up": "docker-compose up -d",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:reset": "npx prisma migrate reset --force",
