--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "Monorepo",
     "Full-Stack"
   ],
+  "workspaces": [
+    "./server"
+  ],
   "repository": {
     "type": "git",
     "url": "git@personal:danielgithiomi/pocket-pilot.git"
@@ -29,6 +32,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel --no-cache",
     "prisma:studio": "turbo run prisma:studio",
+    "docker:up": "turbo run docker:up --filter=pocket-pilot-server",
     "prisma:reset": "turbo run prisma:reset --filter=pocket-pilot-server",
     "prisma:migrate": "turbo run prisma:migrate --filter=pocket-pilot-server --",
     "prisma:generate": "turbo run prisma:generate --filter=pocket-pilot-server",
