Ref (Identity-Module) 'PP-003': Standardized import formatting and spacing in Identity module and test files for improved consistency and readability

--- a/server/package.json
+++ b/server/package.json
@@ -81,7 +81,7 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
     "moduleNameMapper": {
-      "@shared/(.*)": "<rootDir>/../shared/$1"
+      "@infrastructure/(.*)": "<rootDir>/infrastructure/$1"
     }
   },
   "packageManager": "npm@11.6.3"
