--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -22,6 +22,9 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
+      "@common/*": [
+        "./src/common/*"
+      ],
       "@infrastructure/*": ["./src/infrastructure/*"]
     }
   }
