Ref (Server-Codebase) 'PP-003': Added  module path alias to  in Jest config and reformatted imports and spacing in  for better readability.

--- a/server/package.json
+++ b/server/package.json
@@ -81,6 +81,7 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
     "moduleNameMapper": {
+      "@common/(.*)": "<rootDir>/common/$1",
       "@infrastructure/(.*)": "<rootDir>/infrastructure/$1"
     }
   },
