Feat (module-identity) 'PP-003': Implement JWT access and refresh token generation and secure HTTP-only cookie storage for user login.

--- a/server/.env-example
+++ b/server/.env-example
@@ -29,4 +29,6 @@ POSTGRES_PASSWORD=
 
 # JWT
 
+JWT_ACCESS_TOKEN_VALIDITY_DURATION=1h
+JWT_REFRESH_TOKEN_VALIDITY_DURATION=1d
 JWT_SECRET_ENCODING_KEY=
