Feat (module-identity) 'PP-003': implement global JWT authentication with `AuthTokenInterceptor`, user lookup, and logout functionality.

--- a/server/package.json
+++ b/server/package.json
@@ -88,6 +88,7 @@
         "testEnvironment": "node",
         "moduleNameMapper": {
             "@common/(.*)": "<rootDir>/common/$1",
+            "@modules/(.*)": "<rootDir>/modules/$1",
             "@infrastructure/(.*)": "<rootDir>/infrastructure/$1"
         }
     },
