--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -23,7 +23,9 @@
         "noFallthroughCasesInSwitch": false,
         "paths": {
             "@common/*": ["./src/common/*"],
+            "@modules/*": ["./src/modules/*"],
             "@infrastructure/*": ["./src/infrastructure/*"]
-        }
+        },
+        "typeRoots": ["./node_modules/@types", "./src/types"]
     }
 }
