--- a/server/package.json
+++ b/server/package.json
@@ -32,9 +32,11 @@
         "@nestjs/jwt": "^11.0.2",
         "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^11.0.1",
+        "@nestjs/swagger": "^11.2.6",
         "@prisma/adapter-pg": "^7.3.0",
         "@prisma/client": "^7.3.0",
         "bcryptjs": "^2.4.3",
+        "class-transformer": "^0.5.1",
         "cookie-parser": "^1.4.7",
         "dotenv": "^17.2.3",
         "passport": "^0.7.0",
@@ -42,7 +44,7 @@
         "pg": "^8.17.2",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
-        "class-transformer": "^0.5.1"
+        "swagger-ui-express": "^5.0.1"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.2.0",
