--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
         "@prisma/client": "^7.3.0",
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.3",
         "cookie-parser": "^1.4.7",
         "dotenv": "^17.2.3",
         "passport": "^0.7.0",
@@ -44,7 +45,8 @@
         "pg": "^8.17.2",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
-        "swagger-ui-express": "^5.0.1"
+        "swagger-ui-express": "^5.0.1",
+        "zod": "^4.1.13"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.2.0",
@@ -64,7 +66,7 @@
         "globals": "^16.0.0",
         "jest": "^30.0.0",
         "prettier": "^3.4.2",
-        "prisma": "^7.3.0",
+        "prisma": "^6.19.2",
         "source-map-support": "^0.5.21",
         "supertest": "^7.0.0",
         "ts-jest": "^29.2.5",
