--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "author": "danielgithiomi <https://github.com/danielgithiomi>",
     "description": "This is the pocket-pilot server developed with NestJs.",
     "private": true,
-    "license": "UNLICENSED",
+    "license": "ISC",
     "scripts": {
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
