--- a/frontend/web/angular.json
+++ b/frontend/web/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "20428d7a-8224-40fa-8691-ad63c661526f"
   },
   "newProjectRoot": "projects",
   "projects": {
