--- a/frontend/web/tsconfig.json
+++ b/frontend/web/tsconfig.json
@@ -13,7 +13,12 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "ES2022",
-    "module": "preserve"
+    "module": "preserve",
+    "baseUrl": "./",
+    "paths": {
+      "@pages/*": ["src/app/pages/*"],
+      "@components/*": ["src/app/components/*"],
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -29,5 +34,5 @@
     {
       "path": "./tsconfig.spec.json"
     }
-  ]
+  ],
 }
