--- a/frontend/web/tsconfig.json
+++ b/frontend/web/tsconfig.json
@@ -18,6 +18,7 @@
     "paths": {
       "@pages/*": ["src/app/pages/*"],
       "@components/*": ["src/app/components/*"],
+      "@layouts/*": ["src/app/components/layouts/*"],
     }
   },
   "angularCompilerOptions": {
