Feat (frontend-layouts) 'PP-007': Add AuthFeature component, update login page to display dynamic features, and enhance layout with Tailwind CSS improvements.
Signed-off-by: Daniel Githiomi <danielgithiomi@gmail.com>

--- a/frontend/web/tsconfig.json
+++ b/frontend/web/tsconfig.json
@@ -17,7 +17,9 @@
     "baseUrl": "./",
     "paths": {
       "@pages/*": ["src/app/pages/*"],
+      "@types/*": ["src/app/libs/types/*"],
       "@components/*": ["src/app/components/*"],
+      "@constants/*": ["src/app/libs/constants/*"],
       "@layouts/*": ["src/app/components/layouts/*"],
     }
   },
