Feat (frontend-icon) 'PP-007': Add `ArrowedCircle` icon component and update `auth-feature` to use it with a configurable text color.

--- a/frontend/web/tsconfig.json
+++ b/frontend/web/tsconfig.json
@@ -20,7 +20,8 @@
       "@types/*": ["src/app/libs/types/*"],
       "@components/*": ["src/app/components/*"],
       "@constants/*": ["src/app/libs/constants/*"],
-      "@layouts/*": ["src/app/components/layouts/*"],
+      "@atoms/*": ["src/app/components/ui/atoms/*"],
+      "@layouts/*": ["src/app/components/layouts/*"]
     }
   },
   "angularCompilerOptions": {
@@ -37,5 +38,5 @@
     {
       "path": "./tsconfig.spec.json"
     }
-  ],
+  ]
 }
