--- a/frontend/web/tsconfig.json
+++ b/frontend/web/tsconfig.json
@@ -18,6 +18,9 @@
     "paths": {
       "@libs/*": ["src/app/libs/*"],
       "@pages/*": ["src/app/pages/*"],
+      "@global/*": [
+        "../../shared/*"
+      ],
       "@components/*": ["src/app/components/*"],
       "@constants/*": ["src/app/libs/constants/*"],
       "@atoms/*": ["src/app/components/ui/atoms/*"],
