--- a/frontend/web/tsconfig.json
+++ b/frontend/web/tsconfig.json
@@ -18,10 +18,10 @@
     "paths": {
       "@libs/*": ["src/app/libs/*"],
       "@pages/*": ["src/app/pages/*"],
-      "@global/*": [
-        "../../shared/*"
-      ],
+      "@global/*": ["../../shared/*"],
+      "@services/*": ["src/app/services/*"],
       "@components/*": ["src/app/components/*"],
+      "@environments/*": ["src/environments/*"],
       "@constants/*": ["src/app/libs/constants/*"],
       "@atoms/*": ["src/app/components/ui/atoms/*"],
       "@layouts/*": ["src/app/components/layouts/*"]
