Ref (frontend-services) 'PP-009': Restructure API services into a new `api` directory and introduce an `infrastructure` module with a `cookies.interceptor`.

--- a/frontend/web/tsconfig.json
+++ b/frontend/web/tsconfig.json
@@ -19,12 +19,14 @@
       "@libs/*": ["src/app/libs/*"],
       "@pages/*": ["src/app/pages/*"],
       "@global/*": ["../../shared/*"],
-      "@services/*": ["src/app/services/*"],
+      "@services/*": ["src/app/api/services/*"],
       "@components/*": ["src/app/components/*"],
       "@environments/*": ["src/environments/*"],
       "@constants/*": ["src/app/libs/constants/*"],
       "@atoms/*": ["src/app/components/ui/atoms/*"],
-      "@layouts/*": ["src/app/components/layouts/*"]
+      "@layouts/*": ["src/app/components/layouts/*"],
+      // Infrastructure
+      "@interceptors/*": ["src/app/infrastructure/interceptors/*"],
     }
   },
   "angularCompilerOptions": {
