Feat (frontend-services) 'PP-009': Implmented well structured api folder with services and methods for resources and mutations

--- a/frontend/web/tsconfig.json
+++ b/frontend/web/tsconfig.json
@@ -16,10 +16,10 @@
     "module": "preserve",
     "baseUrl": "./",
     "paths": {
-      "@api/*": ["src/app/api/*"],
       "@libs/*": ["src/app/libs/*"],
       "@pages/*": ["src/app/pages/*"],
       "@global/*": ["../../shared/*"],
+      "@api/*": ["src/app/api/services/*"],
       "@components/*": ["src/app/components/*"],
       "@environments/*": ["src/environments/*"],
       "@constants/*": ["src/app/libs/constants/*"],
