--- a/frontend/web/tsconfig.json
+++ b/frontend/web/tsconfig.json
@@ -20,6 +20,7 @@
       "@pages/*": ["src/app/pages/*"],
       "@global/*": ["../../shared/*"],
       "@api/*": ["src/app/api/services/*"],
+      "@methods/*": ["src/app/api/methods/*"],
       "@components/*": ["src/app/components/*"],
       "@environments/*": ["src/environments/*"],
       "@constants/*": ["src/app/libs/constants/*"],
