--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -26,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "@angular/animations": "^21.1.5",
     "@angular/common": "^21.1.0",
     "@angular/compiler": "^21.1.0",
     "@angular/core": "^21.1.0",
