--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
         "@nestjs/swagger": "^11.2.6",
         "@prisma/adapter-pg": "^7.3.0",
         "@prisma/client": "^6.19.2",
+        "argon2": "^0.44.0",
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.3",
